test/fail/non-theorems/Issue1/Predicates/20-foo.fof
%-----------------------------------------------------------------------------
% This file was generated automatically by Apia.
%-----------------------------------------------------------------------------

%-----------------------------------------------------------------------------
% The conjecture.

% The Agda term was:
% Name: Issue1.Predicates.foo
% Role: prove
% Line: 20
fof(n10_12230264540234150503, conjecture, ((a_6_12230264540234150503) => (pA_8_12230264540234150503))).

% End conjecture.

%-----------------------------------------------------------------------------
% End TPTP file.
